--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "short_name": "app",
+  "name": "Dear.red",
+  "short_name": "Dearred",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
