--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "init": "vue inspect",
+    "dev": "npm run serve",
+    "start": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
@@ -10,8 +13,12 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "app.vue": "^0.1.10",
+    "fastclick": "^1.0.6",
+    "gsap": "^2.0.2",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-progressbar-v": "^0.7.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -29,6 +36,7 @@
     "lint-staged": "^7.2.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "sass-variables-webpack-plugin": "^0.0.4",
     "vue-template-compiler": "^2.5.17"
   },
   "gitHooks": {
