--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
     "dist": "rundist",
-    "server": "supervisor -w ./script script/dist-server.js"
+    "server": "supervisor -w ./scripts scripts/dist-server.js"
   },
   "dependencies": {
     "app.vue": "^0.1.10",
