--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@vue/eslint-config-standard": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
+    "github-webhook-handler": "^0.7.1",
     "lint-staged": "^7.2.2",
+    "node-cmd": "^3.0.0",
     "node-sass": "^4.9.0",
     "rundist": "^0.0.3-ILoveNana",
     "sass-loader": "^7.0.1",
