--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
     "dist": "rundist",
+    "server-install": "cnpm i supervisor compression github-webhook-handler node-cmd",
     "server": "supervisor -w ./scripts scripts/dist-server.js"
   },
   "dependencies": {
