--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "app.vue": "^0.1.10",
     "fastclick": "^1.0.6",
     "gsap": "^2.0.2",
+    "pathfinding": "^0.4.18",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-progressbar-v": "^0.7.5",
