--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
     "dist": "rundist",
+    "server-install": "npm install compression express github-webhook-handler node-cmd",
     "server": "supervisor -w ./scripts scripts/dist-server.js"
   },
   "dependencies": {
