--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "init": "vue inspect",
-    "dev": "npm run serve",
-    "start": "npm run serve",
+    "inspect": "vue inspect",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build:report": "npm run build -- --report",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
-    "dist": "rundist",
-    "server-install": "npm install compression express github-webhook-handler node-cmd",
-    "server": "supervisor -w ./scripts scripts/dist-server.js"
+    "dist": "rundist --port 8080 --extend scripts/git-guard.js",
+    "server": "npm run dist",
+    "server:install": "npm install compression express github-webhook-handler node-cmd"
   },
   "dependencies": {
     "app.vue": "^0.1.10",
@@ -42,13 +40,14 @@
     "lint-staged": "^7.2.2",
     "node-cmd": "^3.0.0",
     "node-sass": "^4.9.0",
-    "rundist": "^0.0.3-ILoveNana",
+    "rundist": "^0.1.5",
     "sass-loader": "^7.0.1",
     "sass-variables-webpack-plugin": "^0.0.4",
     "vue-template-compiler": "^2.5.17"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "commit-msg": "node scripts/verify-commit-msg.js"
   },
   "lint-staged": {
     "*.js": [
