--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "init": "vue inspect",
-    "dev": "npm run serve",
-    "start": "npm run serve",
+    "inspect": "vue inspect",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build:report": "npm run build -- --report",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
-    "dist": "rundist",
-    "server-install": "npm install compression express github-webhook-handler node-cmd",
-    "server": "supervisor -w ./scripts scripts/dist-server.js"
+    "dist": "rundist --port 8080 --extend scripts/git-guard.js",
+    "server": "npm run dist",
+    "server:install": "npm install compression express github-webhook-handler node-cmd",
+    "commit": "npx git-cz"
   },
   "dependencies": {
     "app.vue": "^0.1.10",
@@ -38,25 +37,28 @@
     "@vue/eslint-config-standard": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
+    "eslint-plugin-flowtype": "^3.2.0",
     "github-webhook-handler": "^0.7.1",
     "lint-staged": "^7.2.2",
     "node-cmd": "^3.0.0",
     "node-sass": "^4.9.0",
-    "rundist": "^0.0.3-ILoveNana",
+    "remove-flow-types-loader": "^1.1.0",
+    "rundist": "^0.1.5",
     "sass-loader": "^7.0.1",
     "sass-variables-webpack-plugin": "^0.0.4",
     "vue-template-compiler": "^2.5.17"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "commit-msg": "node scripts/verify-commit-msg.js"
   },
   "lint-staged": {
     "*.js": [
-      "vue-cli-service lint",
+      "npm run lint",
       "git add"
     ],
     "*.vue": [
-      "vue-cli-service lint",
+      "npm run lint",
       "git add"
     ]
   }
