--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "@vue/cli-service": "^3.0.5",
     "@vue/eslint-config-standard": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.20",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
     "eslint-plugin-flowtype": "^3.2.0",
     "github-webhook-handler": "^0.7.1",
