--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build:report": "npm run build --report",
-    "lint": "vue-cli-service lint",
+    "lint": "eslint --ext .js,.vue,.json src --fix",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
     "dist": "rundist --port 80 --extend scripts/git-guard.js",
@@ -41,6 +41,7 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
+    "eslint": "^5.10.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "github-webhook-handler": "^0.7.1",
     "lint-staged": "^7.2.2",
