fix: 🔥 start url

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
     "navigation": false
   },
   "default_locale": "en",
-  "start_url": "/index.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#4DBA87",
