--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
+    "banner-js-webpack-plugin": "^0.0.0-beta.0",
     "chai": "^4.1.2",
     "eslint": "^5.10.0",
     "eslint-plugin-flowtype": "^3.2.0",
