--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^5.10.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "github-webhook-handler": "^0.7.1",
+    "hiring": "^0.0.0",
     "lint-staged": "^7.2.2",
     "node-cmd": "^3.0.0",
     "node-sass": "^4.9.0",
