--- a/package.json
+++ b/package.json
@@ -3,57 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "inspect": "vue inspect",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build:report": "npm run build --report",
-    "lint": "eslint --ext .js,.vue,.json src --fix",
-    "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit",
-    "dist": "rundist --port 443 --https --sslkey cert/1604818_dear.red.key --sslcert cert/1604818_dear.red.pem --extend scripts/git-guard.js",
-    "server": "npm run dist",
+    "start": "umi dev",
+    "build": "umi build",
+    "test": "umi test",
+    "lint": "npm run lint:es && npm run lint:ts",
+    "lint:es": "eslint --ext .js src mock tests",
+    "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "dist": "rundist",
+    "server": "rundist --port 443 --https --sslkey cert/1604818_dear.red.key --sslcert cert/1604818_dear.red.pem --extend scripts/git-guard.js",
     "server:install": "npm install compression express github-webhook-handler node-cmd rundist",
     "commit": "npx git-cz"
   },
   "dependencies": {
-    "@chiaweilee/filters": "^0.0.1",
-    "app.vue": "^0.1.10",
-    "fastclick": "^1.0.6",
-    "gsap": "^2.0.2",
-    "pathfinding": "^0.4.18",
-    "register-service-worker": "^1.0.0",
-    "vue": "^2.5.19",
-    "vue-router": "^3.0.2",
-    "vuex": "^3.0.1"
+    "dva": "^2.5.0-beta.2",
+    "antd": "^3.12.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^3.0.0",
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-e2e-cypress": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.1",
-    "@vue/cli-plugin-pwa": "^3.2.0",
-    "@vue/cli-plugin-unit-mocha": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
+    "@types/jest": "^23.3.12",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-test-renderer": "^16.0.3",
+    "babel-eslint": "^9.0.0",
     "banner-js-webpack-plugin": "^0.0.0-beta.0",
-    "chai": "^4.1.2",
-    "eslint": "^5.10.0",
-    "eslint-plugin-flowtype": "^3.2.0",
-    "github-webhook-handler": "^0.7.1",
-    "hiring": "^0.0.0-beta",
+    "eslint": "^5.4.0",
+    "eslint-config-umi": "^1.4.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
-    "node-cmd": "^3.0.0",
-    "node-sass": "^4.9.0",
-    "remove-flow-types-loader": "^1.1.0",
-    "rundist": "^0.2.3",
-    "sass-loader": "^7.0.1",
-    "sass-variables-webpack-plugin": "^0.1.0",
-    "vue-template-compiler": "^2.5.19"
+    "react-test-renderer": "^16.7.0",
+    "tslint": "^5.12.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-react": "^3.6.0",
+    "umi": "^2.4.2",
+    "umi-plugin-react": "^1.4.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged",
@@ -61,11 +48,11 @@
   },
   "lint-staged": {
     "*.js": [
-      "npm run lint",
+      "npm run lint:es",
       "git add"
     ],
-    "*.vue": [
-      "npm run lint",
+    "*.ts": [
+      "npm run lint:ts",
       "git add"
     ]
   }
