--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
     "react-test-renderer": "^16.7.0",
+    "stylelint": "^9.10.1",
+    "stylelint-config-ali": "^0.1.1",
     "tslint": "^5.12.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
