--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-test-renderer": "^16.0.3",
     "babel-eslint": "^9.0.0",
+    "babel-plugin-transform-react-jsx-filter": "^6.0.0",
     "banner-js-webpack-plugin": "^0.0.0-beta.0",
     "eslint": "^5.4.0",
+    "eslint-config-react-jsx-filter": "^6.0.0",
     "eslint-config-umi": "^1.4.0",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "^2.14.0",
