--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "babel-plugin-transform-react-jsx-filter": "^6.0.1",
     "banner-js-webpack-plugin": "^0.0.0-beta.0",
     "eslint": "^5.4.0",
+    "eslint-config-ali": "^5.0.1",
+    "eslint-config-prettier": "^4.0.0",
     "eslint-config-react-jsx-filter": "^6.0.0",
-    "eslint-config-umi": "^1.4.0",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.11.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "prettier": "^1.16.4",
     "react-test-renderer": "^16.7.0",
     "stylelint": "^9.10.1",
     "stylelint-config-ali": "^0.1.1",
