feat: update dist extend

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "npm run lint:es && npm run lint:ts",
     "lint:es": "eslint --ext .js src mock tests",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "dist": "rundist",
-    "server": "rundist --port 443 --https --sslkey cert/1604818_dear.red.key --sslcert cert/1604818_dear.red.pem --extend scripts/git-guard.js",
+    "dist": "rundist --extend scripts/dist-extend.js",
+    "server": "rundist --port 443 --https --sslkey cert/1604818_dear.red.key --sslcert cert/1604818_dear.red.pem --extend scripts/dist-extend.js",
     "server:install": "npm install compression express github-webhook-handler node-cmd rundist",
     "commit": "npx git-cz"
   },
@@ -38,10 +38,13 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "github-webhook-handler": "^0.7.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "node-cmd": "^3.0.0",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.2",
+    "rundist": "^0.2.3",
     "stylelint": "^9.10.1",
     "stylelint-config-ali": "^0.1.1",
     "tslint": "^5.12.1",
