--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
     "dist": "rundist --extend scripts/dist-extend.js",
     "server": "rundist --port 443 --https --sslkey cert/1604818_dear.red.key --sslcert cert/1604818_dear.red.pem --extend scripts/dist-extend.js",
-    "server:install": "npm install compression express github-webhook-handler node-cmd rundist",
+    "server:install": "npm install compression express github-webhook-handler node-cmd rundist graphql",
     "commit": "npx git-cz"
   },
   "dependencies": {
     "antd": "^3.13.5",
     "current-device": "^0.8.0",
     "dva": "^2.5.0-beta.2",
-    "graphql": "^14.1.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2"
   },
@@ -40,6 +39,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "github-webhook-handler": "^0.7.1",
+    "graphql": "^14.1.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
     "node-cmd": "^3.0.0",
