--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "npm run lint:es && npm run lint:ts",
     "lint:es": "eslint --ext .js .",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "dist": "rundist --extend scripts/dist-extend.js",
-    "server": "rundist --port 443 --https --sslkey cert/1604818_dear.red.key --sslcert cert/1604818_dear.red.pem --extend scripts/dist-extend.js",
-    "server:install": "npm install compression express github-webhook-handler node-cmd rundist graphql",
+    "dist": "cross-env NODE_ENV=server rundist --extend server/server-extend.js",
+    "server": "cross-env NODE_ENV=server rundist --port 443 --https --sslkey cert/1604818_dear.red.key --sslcert cert/1604818_dear.red.pem --extend server/server-extend.js",
+    "server:install": "npm install compression express github-webhook-handler node-cmd rundist graphql css-modules-require-hook asset-require-hook cross-env",
     "commit": "npx git-cz"
   },
   "dependencies": {
@@ -26,9 +26,12 @@
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
     "@types/react-test-renderer": "^16.8.1",
+    "asset-require-hook": "^1.2.0",
     "babel-eslint": "^9.0.0",
     "babel-plugin-transform-react-jsx-filter": "^6.0.1",
     "banner-js-webpack-plugin": "^0.0.0-beta.0",
+    "cross-env": "^5.2.0",
+    "css-modules-require-hook": "^4.2.3",
     "eslint": "^5.12.0",
     "eslint-config-ali": "^5.0.1",
     "eslint-config-prettier": "^4.0.0",
