--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "umi dev",
     "build": "umi build",
-    "test": "umi test",
+    "test": "umi test --coverage",
     "lint": "npm run lint:es && npm run lint:ts",
     "lint:es": "eslint --ext .js .",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
