--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "current-device": "^0.8.0",
     "dva": "^2.5.0-beta.2",
     "react": "^16.8.2",
-    "react-dom": "^16.8.2"
+    "react-dom": "^16.8.2",
+    "react-transition-group": "^2.6.0"
   },
   "devDependencies": {
     "@types/jest": "^23.3.12",
