--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "current-device": "^0.8.0",
     "dva": "^2.5.0-beta.2",
     "iconfont-symbol": "^0.1.1",
+    "notifyjs": "^3.0.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-transition-group": "^2.6.0"
