--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Dear.red",
-  "short_name": "Dear.red",
+  "name": "Dear Red",
+  "short_name": "Dear Red",
   "description": "",
   "icons": [
     {
@@ -18,5 +18,8 @@
   "display": "fullscreen",
   "background_color": "#000",
   "theme_color": "#4DBA87",
-  "orientation": "portrait"
+  "orientation": "portrait",
+  "permissions": {
+    "desktop-notification":{}
+  }
 }
