--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.2",
     "rundist": "^0.2.5",
+    "saga-cookie": "^0.1.0",
     "stylelint": "^9.10.1",
     "stylelint-config-ali": "^0.1.1",
     "tslint": "^5.12.1",
