--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "stylelint": "^9.10.1",
     "stylelint-config-ali": "^0.1.1",
     "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
     "umi": "^2.5.4",
