--- a/tslint.yml
+++ b/tslint.yml
@@ -2,6 +2,7 @@ defaultSeverity: error
 extends:
   - tslint-react
   - tslint-eslint-rules
+  - tslint-config-prettier
 jsRules:
 rules:
   eofline: true
