--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "umi dev",
     "build": "umi build",
     "test": "umi test --coverage",
-    "lint": "npm run lint:es && npm run lint:ts",
-    "lint:es": "eslint --ext .js .",
-    "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "lint": "npm run lint:es && npm run lint:ts && npm run lint:sty",
+    "lint:es": "eslint --ext .js --ext .jsx . --fix",
+    "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\" --fix",
+    "lint:sty": "stylelint \"**/*.less\" --fix",
     "dist": "cross-env NODE_ENV=server rundist --extend server/server-extend.js",
     "server": "cross-env NODE_ENV=server rundist --port 443 --https --sslkey cert/1604818_dear.red.key --sslcert cert/1604818_dear.red.pem --extend server/server-extend.js",
     "server:install": "npm install compression express github-webhook-handler node-cmd rundist graphql css-modules-require-hook asset-require-hook cross-env @babel/polyfill @babel/register @babel/core",
@@ -31,6 +32,7 @@
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
     "@types/react-test-renderer": "^16.8.1",
+    "@types/react-transition-group": "^2.0.16",
     "asset-require-hook": "^1.2.0",
     "babel-eslint": "^9.0.0",
     "babel-plugin-transform-react-jsx-filter": "^6.0.1",
@@ -77,6 +79,10 @@
     ],
     "*.ts": [
       "npm run lint:ts",
+      "git add"
+    ],
+    "*.less": [
+      "npm run lint:sty",
       "git add"
     ],
     "*.{js,jsx,json,ts,tsx,css,md}": [
