--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
+    "aliba": "^0.2.10",
     "antd": "^3.15.1",
     "current-device": "^0.8.0",
     "dva": "^2.5.0-beta.2",
