--- a/package.json
+++ b/package.json
@@ -16,23 +16,22 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
-    "aliba": "^0.2.10",
-    "antd": "^3.15.1",
+    "aliba": "^0.2.13",
+    "antd": "^3.16.1",
     "current-device": "^0.8.0",
     "dva": "^2.5.0-beta.2",
     "iconfont-symbol": "^0.1.3",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-transition-group": "^2.6.1",
-    "saga-cookie": "^0.2.3",
-    "why-did-you-update": "^1.0.6"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-transition-group": "^2.8.0",
+    "saga-cookie": "^0.2.3"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.12",
-    "@types/react": "^16.8.4",
-    "@types/react-dom": "^16.8.2",
+    "@types/jest": "^23.3.13",
+    "@types/react": "^16.8.12",
+    "@types/react-dom": "^16.8.3",
     "@types/react-test-renderer": "^16.8.1",
-    "@types/react-transition-group": "^2.0.16",
+    "@types/react-transition-group": "^2.8.0",
     "babel-eslint": "^9.0.0",
     "babel-plugin-transform-react-jsx-filter": "^6.0.1",
     "banner-js-webpack-plugin": "^0.0.0-beta.0",
@@ -40,7 +39,7 @@
     "css-modules-require-hook": "^4.2.3",
     "eslint": "^5.12.0",
     "eslint-config-ali": "^5.0.1",
-    "eslint-config-prettier": "^4.0.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-react-jsx-filter": "^6.0.0",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "^2.14.0",
@@ -48,23 +47,23 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "github-webhook-handler": "^0.7.1",
-    "graphql": "^14.1.1",
+    "graphql": "^14.2.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
     "node-cmd": "^3.0.0",
     "prettier": "^1.16.4",
-    "react-test-renderer": "^16.8.4",
+    "react-test-renderer": "^16.8.6",
     "rundist": "^0.2.5",
     "stylelint": "^9.10.1",
     "stylelint-config-ali": "^0.1.1",
     "stylelint-config-css-modules": "^1.3.0",
     "stylelint-config-prettier": "^5.0.0",
-    "tslint": "^5.12.1",
+    "tslint": "^5.15.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "umi": "^2.5.4",
-    "umi-plugin-react": "^1.5.2",
+    "umi": "^2.6.11",
+    "umi-plugin-react": "^1.7.2",
     "umi-plugin-ssr": "^0.1.4",
     "webpack-bundle-analyzer": "^3.1.0"
   },
