--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint:es": "eslint --ext .js --ext .jsx . --fix",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\" --fix",
     "lint:sty": "stylelint \"**/*.less\" --fix",
-    "dist": "cross-env NODE_ENV=server rundist --extend server/server-extend.js",
-    "server": "cross-env NODE_ENV=server rundist --port 443 --https --sslkey cert/1604818_dear.red.key --sslcert cert/1604818_dear.red.pem --extend server/server-extend.js",
-    "server:install": "npm install compression express github-webhook-handler node-cmd rundist graphql cross-env",
+    "dist": "gge start",
+    "server": "gge start --port=443 --https.key=./cert/1604818_dear.red.key --https.cert=./cert/1604818_dear.red.pem",
+    "server:install": "npm install gge egg-index",
     "commit": "npx git-cz"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "antd": "^3.16.1",
     "current-device": "^0.8.0",
     "dva": "^2.5.0-beta.2",
+    "egg-index": "^0.0.0",
     "iconfont-symbol": "^0.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -35,7 +36,6 @@
     "babel-eslint": "^9.0.0",
     "babel-plugin-transform-react-jsx-filter": "^6.0.1",
     "banner-js-webpack-plugin": "^0.0.0-beta.0",
-    "cross-env": "^5.2.0",
     "css-modules-require-hook": "^4.2.3",
     "eslint": "^5.12.0",
     "eslint-config-ali": "^5.0.1",
@@ -46,14 +46,11 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "github-webhook-handler": "^0.7.1",
-    "graphql": "^14.2.1",
+    "gge": "^0.0.0-beta.2",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
-    "node-cmd": "^3.0.0",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.6",
-    "rundist": "^0.2.5",
     "stylelint": "^9.10.1",
     "stylelint-config-ali": "^0.1.1",
     "stylelint-config-css-modules": "^1.3.0",
