--- a/app.yml
+++ b/app.yml
@@ -17,6 +17,10 @@ config:
       secret: '...'
       event:
         push: './scripts/githook.js'
+    alinode:
+      enable: true
+      appid: '79920'
+      secret: 'ee24acff05a47fa4b92539bb870e4a951e1d98a9'
 plugin:
   index:
     enable: true
@@ -27,3 +31,6 @@ plugin:
   rewriter:
     enable: true
     package: 'egg-rewriter'
+  alinode:
+    enable: true
+    package: 'egg-alinode'
