--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
+    "egg-alinode": "^2.0.1",
     "egg-github-webhook": "^0.1.0-beta.3",
     "egg-index": "^0.0.1",
     "egg-rewriter": "^1.0.4",
