--- a/package.json
+++ b/package.json
@@ -66,8 +66,7 @@
     "webpack-bundle-analyzer": "^3.1.0"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged",
-    "commit-msg": "node scripts/verify-commit-msg.js"
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.js": [
