--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
-    "aliba": "^0.2.13",
-    "antd": "^3.16.1",
-    "current-device": "^0.8.0",
-    "dva": "^2.5.0-beta.2",
+    "aliba": "^0.2.15",
+    "antd": "^3.16.2-alpha.0",
+    "current-device": "^0.8.1",
+    "dva": "^2.6.0-beta.2",
     "iconfont-symbol": "^0.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -56,14 +56,14 @@
     "stylelint-config-ali": "^0.1.1",
     "stylelint-config-css-modules": "^1.3.0",
     "stylelint-config-prettier": "^5.0.0",
-    "tslint": "^5.15.0",
+    "tslint": "^5.18.0",
+    "tslint-config-ali": "^0.2.4",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "umi": "^2.6.11",
-    "umi-plugin-react": "^1.7.2",
-    "umi-plugin-ssr": "^0.1.4",
-    "webpack-bundle-analyzer": "^3.1.0"
+    "umi": "^2.8.7",
+    "umi-plugin-react": "^1.9.6",
+    "webpack-bundle-analyzer": "^3.3.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
