--- a/package.json
+++ b/package.json
@@ -16,15 +16,12 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
-    "aliba": "^0.2.15",
-    "antd": "^3.16.2-alpha.0",
-    "current-device": "^0.8.1",
     "dva": "^2.6.0-beta.2",
-    "iconfont-symbol": "^0.1.3",
+    "github-markdown-css": "^3.0.1",
+    "iconfont-symbol": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-transition-group": "^2.8.0",
-    "saga-cookie": "^0.2.3"
+    "react-transition-group": "^2.8.0"
   },
   "devDependencies": {
     "@types/jest": "^23.3.13",
@@ -60,8 +57,8 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "umi": "^2.8.7",
-    "umi-plugin-md": "^0.0.0-beta.8",
+    "umi": "^2.8.9",
+    "umi-plugin-md": "^0.0.0-beta.9",
     "umi-plugin-react": "^1.9.6",
     "webpack-bundle-analyzer": "^3.3.2"
   },
