--- a/package.json
+++ b/package.json
@@ -12,19 +12,16 @@
     "lint:sty": "stylelint \"**/*.less\" --fix",
     "dist": "gge start",
     "server": "ENABLE_NODE_LOG=YES gge start --port=443 --https.key=./cert/1604818_dear.red.key --https.cert=./cert/1604818_dear.red.pem",
-    "server:install": "npm install gge egg-index egg-alinode",
+    "server:install": "npm install gge egg-index",
     "commit": "npx git-cz"
   },
   "dependencies": {
-    "aliba": "^0.2.15",
-    "antd": "^3.16.2-alpha.0",
-    "current-device": "^0.8.1",
     "dva": "^2.6.0-beta.2",
-    "iconfont-symbol": "^0.1.3",
+    "github-markdown-css": "^3.0.1",
+    "iconfont-symbol": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-transition-group": "^2.8.0",
-    "saga-cookie": "^0.2.3"
+    "react-transition-group": "^2.8.0"
   },
   "devDependencies": {
     "@types/jest": "^23.3.13",
@@ -36,7 +33,6 @@
     "babel-plugin-transform-react-jsx-filter": "^6.0.1",
     "banner-js-webpack-plugin": "^0.0.0-beta.0",
     "css-modules-require-hook": "^4.2.3",
-    "egg-alinode": "^2.0.1",
     "egg-index": "^0.0.0",
     "eslint": "^5.12.0",
     "eslint-config-ali": "^5.0.1",
@@ -61,7 +57,8 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "umi": "^2.8.7",
+    "umi": "^2.8.9",
+    "umi-plugin-md": "^0.0.0-beta.12",
     "umi-plugin-react": "^1.9.6",
     "webpack-bundle-analyzer": "^3.3.2"
   },
