--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,22 +2,11 @@
   "name": "Dear Red",
   "short_name": "Dear Red",
   "description": "",
-  "icons": [
-    {
-      "src": "/img/icons/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/img/icons/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
+  "icons": [],
   "start_url": "/",
   "display": "fullscreen",
   "background_color": "#000",
-  "theme_color": "#4DBA87",
+  "theme_color": "#76bbb7",
   "orientation": "portrait",
   "permissions": {
     "desktop-notification": {}
