--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
   "description": "",
   "icons": [],
   "start_url": "/",
-  "display": "fullscreen",
+  "display": "standalone",
   "background_color": "#000",
   "theme_color": "#76bbb7",
   "orientation": "portrait",
