--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\" --fix",
     "lint:sty": "stylelint \"**/*.less\" --fix",
     "dist": "gge start",
-    "server": "ENABLE_NODE_LOG=YES gge start --port=443 --https.key=./cert/1604818_dear.red.key --https.cert=./cert/1604818_dear.red.pem",
-    "server:install": "npm install gge egg-index",
+    "server": "ENABLE_NODE_LOG=YES gge start --port=443 --https.key=../1604818_dear.red.key --https.cert=../1604818_dear.red.pem",
+    "server:dev": "gge start",
+    "server:install": "npm install gge egg-index egg-github-webhook",
     "commit": "npx git-cz"
   },
   "dependencies": {
     "dva": "^2.6.0-beta.2",
+    "egg-github-webhook": "^0.0.0-beta.1",
     "github-markdown-css": "^3.0.1",
     "iconfont-symbol": "^0.2.0",
     "react": "^16.8.6",
@@ -33,7 +35,7 @@
     "babel-plugin-transform-react-jsx-filter": "^6.0.1",
     "banner-js-webpack-plugin": "^0.0.0-beta.0",
     "css-modules-require-hook": "^4.2.3",
-    "egg-index": "^0.0.0",
+    "egg-index": "^0.0.1",
     "eslint": "^5.12.0",
     "eslint-config-ali": "^5.0.1",
     "eslint-config-prettier": "^4.1.0",
@@ -46,6 +48,7 @@
     "gge": "^0.0.0-beta.2",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "node-cmd": "^3.0.0",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.6",
     "stylelint": "^9.10.1",
