--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
     "tslint-react": "^3.6.0",
     "umi": "^2.8.9",
     "umi-plugin-md": "^0.2.6",
-    "umi-plugin-react": "^1.9.6",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "umi-plugin-react": "^1.9.6"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
