--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "tslint-react": "^3.6.0",
     "umi": "^2.8.9",
     "umi-plugin-md": "^0.2.6",
+    "umi-plugin-pwa": "^0.0.0-beta.0",
     "umi-plugin-react": "^1.9.6"
   },
   "gitHooks": {
