--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "stylelint-config-ali": "^0.2.4",
     "stylelint-config-css-modules": "^1.3.0",
     "stylelint-config-prettier": "^5.0.0",
+    "stylelint-scss": "^3.11.1",
     "tslint": "^5.18.0",
     "tslint-config-ali": "^0.2.4",
     "tslint-config-prettier": "^1.18.0",
@@ -63,6 +64,7 @@
     "tslint-react": "^3.6.0",
     "umi": "^2.8.9",
     "umi-plugin-md": "^0.2.6",
+    "umi-plugin-pwa": "^0.0.0-beta.0",
     "umi-plugin-react": "^1.9.6"
   },
   "gitHooks": {
