--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
+    "arms.js": "^0.0.0-beta.0",
     "dva": "^2.6.0-beta.2",
     "egg-github-webhook": "^0.1.0-beta.3",
     "github-markdown-css": "^3.0.1",
