feat: egg-rewrite

--- a/app.yml
+++ b/app.yml
@@ -24,3 +24,6 @@ plugin:
   githubWebhook:
     enable: true
     package: 'egg-github-webhook'
+  rewriter:
+    enable: true
+    package: 'egg-rewriter'
