--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "arms.js": "^0.0.0-beta.0",
     "dva": "^2.6.0-beta.2",
     "egg-github-webhook": "^0.1.0-beta.3",
+    "egg-rewriter": "^1.0.4",
     "github-markdown-css": "^3.0.1",
     "iconfont-symbol": "^0.2.0",
     "react": "^16.8.6",
