--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
-    "arms.js": "^0.0.0-beta.0",
     "dva": "^2.6.0-beta.2",
     "egg-github-webhook": "^0.1.0-beta.3",
     "egg-rewriter": "^1.0.4",
@@ -50,7 +49,7 @@
     "eslint-plugin-react": "^7.12.4",
     "gge": "^0.0.0-beta.2",
     "husky": "^0.14.3",
-    "lint-staged": "^7.2.2",
+    "lint-staged": "^7.3.0",
     "node-cmd": "^3.0.0",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.6",
@@ -65,8 +64,9 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
     "umi": "^2.8.9",
+    "umi-plugin-arms": "^1.0.0-beta.2",
     "umi-plugin-md": "^0.2.6",
-    "umi-plugin-pwa": "^0.0.0-beta.0",
+    "umi-plugin-pwa": "0.0.0-beta.0",
     "umi-plugin-react": "^1.9.6"
   },
   "gitHooks": {
