--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\" --fix",
     "lint:sty": "stylelint \"**/*.less\" --fix",
     "dist": "gge start",
-    "server": "ENABLE_NODE_LOG=YES gge start --port=443 --https.key=../1604818_dear.red.key --https.cert=../1604818_dear.red.pem",
+    "server": "gge start --port=443 --https.key=../key.key --https.cert=../pem.pem",
     "server:dev": "gge start",
     "server:install": "cnpm install gge egg-index egg-github-webhook node-cmd umi",
     "update": "git fetch --all && git reset --hard origin/master && git pull && umi build",
