--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Dear Red",
-  "short_name": "Dear Red",
+  "name": "Lee6",
+  "short_name": "Lee",
   "description": "",
   "icons": [],
   "lang": "en-UK",
