--- a/package.json
+++ b/package.json
@@ -18,21 +18,23 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
+    "antd": "^3.26.11",
+    "antd-mobile": "^2.3.1",
     "egg-alinode": "^2.0.1",
     "egg-github-webhook": "^0.1.0-beta.3",
     "egg-index": "^0.0.1",
     "egg-rewriter": "^1.0.4",
     "gge": "^0.0.0-beta.2",
     "github-markdown-css": "^3.0.1",
-    "iconfont-symbol": "^0.2.1-beta.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-transition-group": "^2.9.0"
+    "react-transition-group": "^2.9.0",
+    "uh06l6": "^0.0.0"
   },
   "devDependencies": {
     "@types/jest": "^23.3.13",
     "@types/react": "^16.9.9",
-    "@types/react-dom": "^16.9.2",
+    "@types/react-dom": "^16.9.5",
     "@types/react-test-renderer": "^16.9.1",
     "@types/react-transition-group": "^2.9.2",
     "babel-eslint": "^9.0.0",
@@ -54,19 +56,19 @@
     "prettier": "^1.18.2",
     "react-test-renderer": "^16.10.2",
     "stylelint": "^9.10.1",
-    "stylelint-config-ali": "^0.2.6",
+    "stylelint-config-ali": "^0.3.1",
     "stylelint-config-css-modules": "^1.5.0",
     "stylelint-config-prettier": "^5.3.0",
     "stylelint-scss": "^3.11.1",
-    "tslint": "^5.20.0",
+    "tslint": "^5.20.1",
     "tslint-config-ali": "^0.2.4",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "umi": "^2.10.7",
+    "umi": "^2.13.3",
     "umi-plugin-md": "^0.2.6",
     "umi-plugin-pwa": "0.0.0-beta.0",
-    "umi-plugin-react": "^1.12.8"
+    "umi-plugin-react": "^1.15.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
