--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
   "dependencies": {
     "antd": "^3.26.11",
     "antd-mobile": "^2.3.1",
+    "blueimp-md5": "^2.12.0",
     "egg-alinode": "^2.0.1",
     "egg-github-webhook": "^0.1.0-beta.3",
     "egg-index": "^0.0.1",
     "egg-rewriter": "^1.0.4",
     "gge": "^0.0.0-beta.3",
     "github-markdown-css": "^3.0.1",
+    "lodash": "^4.17.15",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-transition-group": "^2.9.0",
-    "uh06l6": "0.0.0-rc.2"
+    "react-transition-group": "^2.9.0"
   },
   "devDependencies": {
+    "@types/blueimp-md5": "^2.7.0",
     "@types/jest": "^23.3.13",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.5",
