--- a/package.json
+++ b/package.json
@@ -18,29 +18,16 @@
   "dependencies": {
     "antd": "^3.26.11",
     "antd-mobile": "^2.3.1",
-    "blueimp-md5": "^2.12.0",
-    "egg-alinode": "^2.0.1",
     "egg-github-webhook": "^0.1.0-beta.3",
     "egg-index": "^0.0.1",
     "egg-rewriter": "^1.0.4",
     "gge": "^0.0.0-beta.3",
-    "github-markdown-css": "^3.0.1",
-    "lodash": "^4.17.15",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-transition-group": "^2.9.0"
+    "github-markdown-css": "^3.0.1"
   },
   "devDependencies": {
-    "@types/blueimp-md5": "^2.7.0",
-    "@types/jest": "^23.3.13",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.5",
-    "@types/react-test-renderer": "^16.9.1",
-    "@types/react-transition-group": "^2.9.2",
     "babel-eslint": "^9.0.0",
-    "babel-plugin-transform-react-jsx-filter": "^6.0.1",
-    "banner-js-webpack-plugin": "^0.0.0-beta.0",
-    "css-modules-require-hook": "^4.2.3",
     "eslint": "^5.16.0",
     "eslint-config-ali": "^7.1.0",
     "eslint-config-prettier": "^4.3.0",
@@ -53,9 +40,7 @@
     "gulp": "^4.0.2",
     "husky": "^0.14.3",
     "lint-staged": "^7.3.0",
-    "node-cmd": "^3.0.0",
     "prettier": "^1.18.2",
-    "react-test-renderer": "^16.10.2",
     "stylelint": "^9.10.1",
     "stylelint-config-ali": "^0.3.1",
     "stylelint-config-css-modules": "^1.5.0",
