--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "dist": "gge start",
     "server": "gge start --port=443 --https.key=../key.key --https.cert=../pem.pem",
     "server:dev": "gge start",
-    "commit": "npx git-cz"
+    "commit": "npx git-cz",
+    "install": "cnpm i --production"
   },
   "dependencies": {
-    "antd": "^3.26.11",
-    "antd-mobile": "^2.3.1",
     "egg-github-webhook": "^0.1.0-beta.3",
     "egg-index": "^0.0.1",
     "egg-rewriter": "^1.0.4",
     "gge": "^0.0.0-beta.3",
-    "github-markdown-css": "^3.0.1"
+    "github-markdown-css": "^3.0.1",
+    "umi": "^2.13.7",
+    "umi-plugin-md": "^0.2.6",
+    "umi-plugin-pwa": "^0.0.0-beta.0",
+    "umi-plugin-react": "^1.15.2"
   },
   "devDependencies": {
     "@types/react": "^16.9.9",
@@ -50,11 +53,7 @@
     "tslint-config-ali": "^0.2.4",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^3.6.0",
-    "umi": "^2.13.3",
-    "umi-plugin-md": "^0.2.6",
-    "umi-plugin-pwa": "0.0.0-beta.0",
-    "umi-plugin-react": "^1.15.2"
+    "tslint-react": "^3.6.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
