--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gulp": "^4.0.2",
     "umi": "^2.13.7",
     "umi-plugin-md": "^0.2.6",
-    "umi-plugin-pwa": "^0.0.0-beta.0",
+    "umi-plugin-pwa": "0.0.0-beta.0",
     "umi-plugin-react": "^1.15.2"
   },
   "devDependencies": {
