--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
           steps:
             - run: npm install
       - run: npm run build
+      - run: sh deploy-circleci.sh
 workflows:
     build-and-deploy:
       jobs:
