ci: master only

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,6 @@ workflows:
     build-and-deploy:
       jobs:
         - build-and-deploy
+          filters:
+            branches:
+              only: master
