--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,6 @@ jobs:
   build-and-deploy:
     executor:
       name: node/default
-    filters:
-      branches:
-        only: master
     steps:
       - checkout
       - node/with-cache:
@@ -18,3 +15,7 @@ workflows:
     build-and-deploy:
       jobs:
         - build-and-deploy
+          filters:
+            branches:
+              only:
+                - "master"
