--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ orbs:
   node: circleci/node@1.1.6
 jobs:
   build-and-deploy:
+    branches:
+      only:
+        - master
     executor:
       name: node/default
     steps:
@@ -15,7 +18,3 @@ workflows:
     build-and-deploy:
       jobs:
         - build-and-deploy
-          filters:
-            branches:
-              only:
-                - "master"
