--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,6 @@ orbs:
   node: circleci/node@1.1.6
 jobs:
   build-and-deploy:
-    branches:
-      only:
-        - master
     executor:
       name: node/default
     steps:
@@ -15,6 +12,11 @@ jobs:
             - run: npm install
       - run: sh deploy-circleci.sh
 workflows:
-    build-and-deploy:
-      jobs:
-        - build-and-deploy
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build-and-deploy
+        filters:
+          branches:
+            only:
+              - master
