--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
-  build:
+  umi-build:
     executor:
       name: node/default
     steps:
@@ -15,7 +15,4 @@ jobs:
 workflows:
   build-deploy:
     jobs:
-      - build
-          filters:
-            branches:
-              only: master
+      - umi-build
