--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,4 +14,5 @@ jobs:
             - node/with-cache:
                 steps:
                   - run: yarn
+                  - run: yarn lint
                   - run: sh deploy-circleci.sh
