--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,13 +34,10 @@ jobs:
 workflows:
   build_deploy:
     jobs:
-      - run_install:
-          filters:
-            branches:
-              only:
-                - master
       - run_build:
           filters:
             branches:
               only:
                 - master
+          requires:
+            - run_install
