--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,13 +33,17 @@ jobs:
       - run:
           name: auto deploy
           command: |
+            folder=`/home/`
             diffInfo=`git diff --stat`
-            if [ "$diffInfo" = "" ]; then
-             git config --global user.email "$EMAIL"
-              git config --global user.name "$NAME"
-              git add -f home
-              git commit -m "deply: 🤖 auto build"
-              git push
+            if [ "$diffInfo" != "" ]; then
+              echo "$diffInfo";
+              if [ -d "$folder"]; then
+                git config --global user.email "$EMAIL"
+                git config --global user.name "$NAME"
+                git add -f home
+                git commit -m "deply: 🤖 auto build"
+                git push
+              fi
             fi
   run_lint:
     <<: *defaults
